k8s/infra/mongodb/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  namespace: prod
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
