k8s/infra/mongodb/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-0-external
  namespace: prod
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: mongo-0
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      nodePort: 32017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-1-external
  namespace: prod
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: mongo-1
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      nodePort: 32018
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-2-external
  namespace: prod
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: mongo-2
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      nodePort: 32019
